# schema-guard

./: .gitignore  README.md  docs.md  pyproject.toml
.github/workflows/: schema-check.yml  secret-test.yml
contracts/: orders.yaml
snapshots/: orders.json
src/schema_guard/: alerter.py  cli.py  config.py  contract.py  diff_engine.py  snapshot.py
src/schema_guard/extractors/: postgres.py
